--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,8 +1,95 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
-    background-color: royalblue;
+.section {
+    padding: 30px 50px;
+}
+
+.section-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 900px;
+    background-color: #162A3E;
+}
+
+.skills-container {
+    background-color: #FFFFFF;
+}
+
+#skills-title {
+    font-size: 3rem;
+    padding: 0px 0px 60px 0px;
+}
+
+.skills-flex-wrapper-outer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.skills-frontend-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-frontend {
+    height: 75px;
+    width: 75px;
+    background-color: #62D8EF;
+}
+
+.frontend-heading {
+    
+}
+
+.frontend-description {
+    height: 150px;
+    flex-basis: 250px;
+    background-color: #EED690;
+}
+
+.skills-backend-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-backend {
+    height: 75px;
+    width: 75px;
+    background-color: #62D8EF;
+}
+
+.skills-design-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-design {
+    height: 75px;
+    width: 75px;
+    background-color: #62D8EF;
+}
+
+.skills-div {
+    height: 50px;
+    width: auto;
+    background-color: #62D8EF;
+    border: 1px solid #EED690;
 }
