--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,16 +1,30 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Roboto, Helvetica, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+}
+
+a {
+    color: #FFFFFF;
+    text-decoration: none;
 }
 
 h2, h3, p {
     padding: 20px 0px;
 }
 
+p {
+    letter-spacing: 0.5px;
+}
+
 .section {
-    padding: 30px 20% 50px;
+    padding: 60px 20% 80px;
 }
 
 .section-heading {
@@ -19,14 +33,16 @@ h2, h3, p {
     align-items: center;
     font-size: 3rem;
     padding: 0px 0px 30px 0px;
+    letter-spacing: 15px;
+    font-weight: 550;
 }
 
                     /* HERO SECTION */
 
 .hero-container {
     display: grid;
-    grid-template-columns: 1fr 1.75fr 1.75fr 1fr;
-    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: repeat(18, 1fr);
+    grid-template-rows: repeat(18, 1fr);
     justify-items: center;
     align-items: center;
     height: 100vh;
@@ -37,21 +53,30 @@ h2, h3, p {
 }
 
 .hero-heading {
-    grid-area: 3 / 2 / 4 / 4;
+    grid-area: 7 / 4 / span 4 / span 12;
     color: #FFFFFF;
     text-align: center;
     justify-self: center;
     align-self: center;
     font-size: 4rem;
+    font-weight: 600;
+    letter-spacing: 3px;
 }
 
 .scroll-down-btn {
-    grid-area: 4 / 2 / 4 / 4;
+    grid-area: 12 / 9 / 13 / 11;
     justify-self: center;
-    align-self: center;
+    align-self: start;
     background-repeat: no-repeat;
     font-size: 4rem;
     color: #EE6633;
+    transition: all 3s;
+  transform: scale3d(0.76, 0.76, 0.76);
+}
+
+.scroll-down-btn:hover {
+    cursor: pointer;
+    transform: scale3d(1, 1, 1);
 }
 
 .logo {
@@ -63,7 +88,8 @@ h2, h3, p {
 
 #hero-logo {
     justify-self: center;
-    align-self: center;
+    align-self: start;
+    grid-area: 2 / 2 / 3 / 3;
 }
 
 .cta-btn {
@@ -75,15 +101,33 @@ h2, h3, p {
     border-radius: 3px;
     margin: 20px;
     cursor: pointer;
+    border: 3px solid transparent;
+}
+
+.cta-btn:hover {
+    background-color: transparent;
+    border: 3px solid #EE6633;
+    color: #EE6633;
+    transition: 0.5s;
+}
+
+.cta-btn-contact {
+    margin: 0px;
 }
 
 .hero-contact-btn {
-    grid-area: 1 / 4 / 2 / 5;
+    grid-area: 2 / 14 / 3 / 18;
+    justify-self: end;
+    align-self: start;
+    margin: 0px;
 }
 
 #hero-icons {
-    grid-area: 6 / 1 / span 1 / span 1;
+    grid-area: 17 / 2 / span 1 / span 4;
     width: 100%;
+    justify-self: start;
+    align-self: end;
+    padding: 0px;
 }
 
 
@@ -91,28 +135,32 @@ h2, h3, p {
 
 
 .hero-nav-flex-wrapper {
-    grid-area: 6 / 3 / span 1 / span 2;
+    grid-area: 17 / 12 / span 1 / span 6;
     justify-self: stretch;
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-self: end;
     text-align: center;
     color: #FFFFFF;
 }
 
-.hero-nav-flex-wrapper > h3 {
+.hero-nav-flex-wrapper h3 {
     padding: 0px;
+}
+
+.hero-nav-flex-wrapper h3:hover {
+    color: #EE6633;
+    transition: 0.5s;
 }
 
 .hero-nav-flex-wrapper > .logo {
     display: none;
 }
 
-.sticky > .logo {
-    display: block;
-    height: 50px;
-    width: 50px;
+.nav-empty-div {
+    display: none;
 }
+
 
 .sticky {
     position: fixed;
@@ -122,14 +170,26 @@ h2, h3, p {
     display: grid;
     grid-template-columns: auto 65% 1fr 1fr 1fr 1fr 1fr;
     height: 60px;
+    align-items: center;
+    padding: 0px 30px;
+    animation: fadeIn 0.5s;
   }  
 
+.sticky > .logo {
+    display: block;
+    height: 50px;
+    width: 50px;
+}
+
+.sticky > .nav-empty-div {
+    display: block;
+}
 
                     /* SKILLS SECTION */
 
 .skills-container {
     background-color: #F3F3F3;
-    padding: 30px 200px;
+    padding: 60px 200px;
 }
 
 .skills-title {    
@@ -140,6 +200,12 @@ h2, h3, p {
     flex-direction: row;
     justify-content: space-around;
     align-items: stretch;
+}
+
+.skills-icon {
+    font-size: 5rem;
+    color: #EE6633;
+    padding: 5px 0px;
 }
 
 .skills-column-container {
@@ -160,41 +226,9 @@ h2, h3, p {
     flex-shrink: 1;
 }
 
-.skills-frontend-container {
+.skills-column-container h3 {
+    letter-spacing: 1.5px;
 }
-
-.icon-frontend {
-    height: 75px;
-    width: 75px;
-    background-color: #EE6633;
-    text-align: center;
-}
-
-.frontend-heading {}
-
-
-.skills-backend-container {
-}
-
-.icon-backend {
-    height: 75px;
-    width: 75px;
-    background-color: #EE6633;
-}
-
-.backend-heading {
-}
-
-.skills-design-container {
-}
-
-.icon-design {
-    height: 75px;
-    width: 75px;
-    background-color: #EE6633;
-}
-
-.design-heading {}
 
 .skills-ul {
     list-style: none;
@@ -205,7 +239,7 @@ h2, h3, p {
 .folio-container {
     /* max-width: 1200px; */
     background-color: #ECECEC;
-    padding: 30px 15% 50px;
+    padding: 60px 15% 80px;
 }
 
 .projects-wrapper {
@@ -248,7 +282,8 @@ h2, h3, p {
 }
 
 .about-image {
-    background-image: url("https://via.placeholder.com/550/EE6633/");
+    background-image: url("./../images/surfing-cj.jpg");
+    background-size: cover;
     width: 550px;
     height: 400px;
 }
@@ -264,6 +299,7 @@ h2, h3, p {
 
 .contact-container {
     background-color: #ECECEC;
+    padding: 80px 20% 80px;   
 }
 
 .contact-container-inner {
@@ -272,6 +308,7 @@ h2, h3, p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px 0px;
 }
 
 .contact-heading {
@@ -290,6 +327,12 @@ h2, h3, p {
     font-size: 3rem;
     color: #EE6633;
 }
+.social-media-icon:hover {
+    /* opacity: 0.8; */
+    color: #FFFFFF;
+    /* font-size: 2.5rem; */
+    transition: 0.5s;
+}
 
 .contact-form-flex-wrapper {
     display: flex;
@@ -298,6 +341,25 @@ h2, h3, p {
     align-items: stretch;
     width: 80%;
     max-width: 700px;
+}
+
+.contact-form-flex-wrapper > input {
+    border: none;
+    text-indent: 7px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1rem;
+}
+
+.contact-form-flex-wrapper .user-message-box {
+    border: none;
+    text-indent: 7px;
+    padding-top: 4px;
+    font-family: Roboto, Helvetica, sans-serif;
+    font-size: 1rem;
+    width: 100%;
+    height: 100%;
+    resize: vertical;
+    overflow: auto;
 }
 
 .contact-form-flex-wrapper > p {
@@ -313,10 +375,6 @@ h2, h3, p {
     flex-shrink: 1;
 }
 
-.user-message-box {
-    flex-basis: 4.5rem;
-}
-
                         /* FOOTER SECTION */
 
 .footer-container {
@@ -324,10 +382,14 @@ h2, h3, p {
     padding: 30px 0px;
 }
 
-.footer-container > div {
+.footer-heading {
     padding: 0px;
+}
+
+.footer-container > div > h2 {
     font-size: 1rem;
     color: #FFFFFF;
+    letter-spacing: 10px;
 }
 
 
@@ -399,4 +461,19 @@ h2, h3, p {
 
 
                         /* CONTACT MEDIA QUERIES */
+
+                        /* FOOTER MEDIA QUERIES */                        
+
+                         /* ANIMATIONS */
+                         
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+} 
+                         
+
                         
