--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -35,6 +35,7 @@ p {
     padding: 0px 0px 30px 0px;
     letter-spacing: 15px;
     font-weight: 550;
+    text-align: center;
 }
 
                     /* HERO SECTION */
@@ -183,7 +184,6 @@ p {
     grid-template-columns: 30px auto 65% 1fr 1fr 1fr 1fr 1fr 30px;
     height: 65px;
     align-items: center;
-    /* padding: 0px 30px; */
     animation: fadeIn 0.5s;
     z-index: 10;
   }  
@@ -208,7 +208,7 @@ p {
 
 .skills-container {
     background-color: #F3F3F3;
-    padding: 60px 200px;
+    padding: 60px 10%;
 }
 
 .skills-title {    
@@ -235,11 +235,10 @@ p {
     flex-basis: 27%;
     text-align: center;
     background-color: #FFFFFF;
-    padding: 40px 60px;
+    padding: 40px 2%;
 }
 
 .skills-description {
-    height: 150px;
     flex-basis: 0;
     flex-grow: 0;
     flex-shrink: 1;
@@ -480,7 +479,19 @@ p {
     letter-spacing: 10px;
 }
 
+                        /* GENERAL MEDIA QUERIES */
+@media (max-width: 768px) {
+    .section-heading {
+        font-size: 2.5rem;
+    }
+}   
 
+@media (max-width: 500px) {
+    .section-heading {
+        font-size: 1.8rem;
+        letter-spacing: 10px;
+    }
+}   
                         /* HERO MEDIA QUERIES */
 
 @media (max-width: 1050px) {
@@ -567,14 +578,21 @@ p {
 
                         /* SKILLS MEDIA QUERIES */
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
     .skills-flex-wrapper-outer {
         flex-direction: column;
         align-items: center;
     }
 
     .skills-column-container {
-        padding: 30px 0px;
+        margin: 30px 0;
+        max-width: 70%;
+    }
+}
+
+@media (max-width: 500px) {
+    .skills-column-container {
+        max-width: 100%;
     }
 }
 
@@ -625,6 +643,10 @@ p {
     .projects-wrapper{
         grid-row-gap: 2rem;
     }
+
+    .folio-container {
+        padding: 60px 5% 80px;
+    }
 }
 
                         /* ABOUT MEDIA QUERIES */
@@ -660,7 +682,18 @@ p {
 
 
                         /* CONTACT MEDIA QUERIES */
+@media (max-width: 768px) {
+    .contact-container {
+        padding: 80px 10% 80px;
+    }
+}   
 
+@media (max-width: 500px) {
+    .contact-container {
+        padding: 80px 5% 80px;
+    }
+}  
+                        
                         /* FOOTER MEDIA QUERIES */                        
 
                          /* ANIMATIONS */
