--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -210,8 +210,8 @@ p {
     grid-area: 1 / 8 / span 1 /span 1;
 }
 
-#nav-logo {
-    grid-area: 1 / 2 / span 1 / span 1;
+#mobile-nav #nav-logo{
+    grid-area: 1 / 2 / span 1 / span 2;
 }
 
 #mobile-nav {
