--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -46,15 +46,18 @@ p {
     grid-template-rows: repeat(18, 1fr);
     justify-items: center;
     align-items: center;
-    height: 100vh;
+    height: calc(100vh - 90px);
     min-height: 500px;
     width: 100%;
     background-color: #48328C;
     padding: 0px 0px;
+    position: fixed;
+    z-index: -10;
+    top: 0;
 }
 
 .hero-heading {
-    grid-area: 7 / 4 / span 4 / span 12;
+    grid-area: 8 / 4 / span 4 / span 12;
     color: #FFFFFF;
     text-align: center;
     justify-self: center;
@@ -65,7 +68,7 @@ p {
 }
 
 .scroll-down-btn-wrapper {
-    grid-area: 12 / 9 / 13 / 11;
+    grid-area: 13 / 9 / span 1 / span 2;
     justify-self: center;
     align-self: start;
 }
@@ -124,26 +127,17 @@ p {
     margin: 0px;
 }
 
-#hero-icons {
-    grid-area: 17 / 2 / span 1 / span 4;
-    width: 100%;
-    justify-self: start;
-    align-self: end;
-    padding: 0px;
-}
-
-
                     /* NAVBAR */
 
-
 .desktop-navbar {
-    grid-area: 17 / 12 / span 1 / span 6;
-    justify-self: stretch;
-    display: flex;
-    justify-content: space-around;
-    align-self: end;
+    display: grid;
+    grid-template-columns: repeat(18, 1fr);
+    grid-template-rows: auto;
     text-align: center;
     color: #FFFFFF;
+    background-color: #48328C;
+    height: 90px;
+    margin-top: calc(100vh - 90px);
 }
 
 .navbar h3 {
@@ -160,10 +154,19 @@ p {
     display: none;
 }
 
-#mobile-nav .burger-menu {
-    display: none;
-    align-self: stretch;
-    padding-top: 2px;
+#desktop-navbar-icons {
+    grid-area: 1 / 2 / span 1 / span 4;
+    width: 100%;
+    justify-self: start;
+    align-self: center;
+    padding: 0px;
+}
+
+.desktop-nav-tabs-wrapper {
+    grid-area: 1 / 13 / span 1 / span 5;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #nav-toggle {
@@ -174,6 +177,9 @@ p {
     display: none;
 }
 
+.sticky .desktop-nav-tabs-wrapper {
+    grid-area: 1 / 4 / span 1 / span 5;
+}
 
 .sticky, #mobile-nav {
     position: fixed;
@@ -186,7 +192,12 @@ p {
     align-items: center;
     animation: fadeIn 0.5s;
     z-index: 10;
+    margin-top: 0px;
   }  
+
+.sticky > .icon-flex-wrapper {
+    display: none;
+}
 
 .sticky > #nav-logo {
     display: block;
@@ -209,6 +220,12 @@ p {
     font-size: 2.5rem;
     grid-area: 1 / 8 / span 1 /span 1;
     color: #FFFFFF;
+}
+
+#mobile-nav .burger-menu {
+    display: none;
+    align-self: stretch;
+    padding-top: 2px;
 }
 
 #mobile-nav #nav-logo {
@@ -514,18 +531,18 @@ p {
                         /* HERO MEDIA QUERIES */
 
 @media (max-width: 1050px) {
-    .desktop-navbar {
-        grid-area: 17 / 10 / span 1 / span 8;
+    .desktop-nav-tabs-wrapper {
+        grid-area: 1 / 10 / span 1 / span 8;
     }
 
-    #hero-icons {
-        grid-area: 17 / 2 / span 1 / span 6;
+    #desktop-navbar-icons {
+        grid-area: 1 / 2 / span 1 / span 6;
     }
 }
 
 @media (max-width: 850px) {
     .scroll-down-btn-wrapper {
-        grid-area: 14 / 9 / span 2 / span 2;
+        grid-area: 13 / 9 / span 2 / span 2;
      }
 }
 
@@ -534,8 +551,14 @@ p {
         display: none;
     }
 
-    #hero-icons {
-        grid-area: 17 / 5 / span 1 / span 10;
+    .hero-container {
+        height: 100vh;
+        position: relative;
+    }
+
+    #desktop-navbar-icons {
+        display: none;
+        /* grid-area: 17 / 5 / span 1 / span 10; */
     }
 
     #hero-logo {
